###### TWE 5.3-1 RELEASED ######

###### TWE 5.2-3 RELEASED ######
2015-12-08 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Improved support for TSCToolAgent

2015-12-04 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Added support for TSCToolAgent

###### TWE 5.2-2 RELEASED (2015-11-04) ######
2015-10-05 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Added support for REEVALUATE_DEADLINES extended attribute

2015-09-21 Sasa Bojanic <sasaboy@together.at>
   # Implemented possibility to D&D XPDL file

2015-09-18 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 
      - Improved recognition of I18N variables usage inside expressions
      
2015-09-16 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 
      - Implemented support for new extended attributes of SMTPNewProcFileSysLogErrorHandler (NEWPROC_ERROR_HANDLER_NEW_PROCESS_PACKAGE_ID and NEWPROC_ERROR_HANDLER_NEW_PROCESS_WORKFLOWPROCESS_ID)

###### TWE 5.2-1 RELEASED (2015-09-15) ######
2015-09-15 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Implemented support (GUI + validation) for new system variables for holding information about the last process instance activity 
                 that failed to execute: shark_process_error_message, shark_process_error_stacktrace and shark_process_error_activity_id

2015-09-11 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Implemented support (GUI + validation) to reference XPDL_STRING variable from DynamicScript variable

2015-09-10 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 
      - Improved validation:
         * can't have the same Ids for xpdl strings/i18n variables/normal variables
         * can't have invalid characters for xpdl string/i18n variables

2015-09-04 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Improved validation - can't have Tool activities having both start and finish mode set to MANUAL 

2015-09-03 Sasa Bojanic <sasaboy@together.at>
   # Java 8 support